# skills

./: README.md
.github/workflows/: sync-r2.yml
skills/elfa-ai/: SKILL.md
skills/elfa-ai/references/: swagger.json
skills/elfa-ai/scripts/: elfa_call.sh
skills/elfa-grvt-bot/: SKILL.md
skills/elfa-grvt-bot/assets/source/: .env.example  .gitignore  AGENTS.template.md  CLAUDE.md  README.md  pyproject.toml
skills/elfa-grvt-bot/assets/source/.claude/: settings.json
skills/elfa-grvt-bot/assets/source/docs/: SMOKE_TEST.md
skills/elfa-grvt-bot/assets/source/scripts/: show_pending_alerts.sh
skills/elfa-grvt-bot/assets/source/src/: registry_cli.py
skills/elfa-grvt-bot/assets/source/src/elfa_grvt_bot/: __main__.py  alerts.py  config.py  elfa_client.py  grvt_executor.py  grvt_trigger_client.py  guardrails.py  receiver.py  registry.py  telegram_sender.py
skills/elfa-grvt-bot/assets/source/tests/: conftest.py  test_alerts.py  test_config.py  test_elfa_client.py  test_grvt_executor.py  test_grvt_trigger_client.py  test_guardrails.py  test_receiver.py  test_registry.py  test_registry_cli.py  test_telegram_sender.py
skills/elfa-grvt-bot/references/: 02-protocols.md  04-algorithms.md  07-test-vectors.md  10-troubleshooting.md  architecture.md  elfa-eql.md  elfa-sse.md  elfa-webhooks.md  grvt-api.md  setup.md  strategy-authoring.md  troubleshooting.md
skills/elfa-grvt-bot/references/captured-frames/: README.md
skills/elfa-grvt-bot/scripts/: bootstrap.py  install.sh  start_receiver.sh  start_tunnel.sh
