[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "elfa-grvt-bot"
version = "0.1.0"
description = "Bridge Elfa AUTO triggers to GRVT order execution"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "requests>=2.31",
  "grvt-pysdk>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "responses>=0.25",
  "httpx>=0.27",
]

[project.scripts]
elfa-grvt-cli = "registry_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
